# depthpalette

./: .gitignore  build.bat  compile.bat  settings.json
common/src/: depthcolor.hpp  viewer.cpp  viewer.hpp  web_ui_shared.hpp  webserver_common.hpp
luxonis/: CMakeLists.txt  CMakePresets.json  build.bat  compile.bat  settings.json
luxonis/src/: blobdetect.hpp  blobtracker.hpp  depthcolor.hpp  main.cpp  viewer_linux.cpp  viewer_linux.hpp  webserver.cpp  webserver.hpp
orbbec/: CMakeLists.txt  CMakePresets.json  build.bat  build.sh  play.bat  settings.json
orbbec/src/: depthcolor.hpp  main.cpp  webserver.cpp  webserver.hpp
src/: blobdetect.hpp  depthcolor.hpp  main.cpp  pointcloud.cpp  pointcloud.hpp  viewer.cpp  viewer.hpp  webserver.cpp  webserver.hpp
